# DatavisualisationPreprocessing

./: .gitignore  BikeShedToQuarter.py  README.md  addressToGeoPoint.py  analyseJsons.ipynb  bikeShedToQuarter.py  campussen.json  fetch_datasets.sh  pyproject.toml
.github/: CODEOWNERS
Dataset/: criminaliteitscijfers-per-wijk-per-maand-gent-2018.json  criminaliteitscijfers-per-wijk-per-maand-gent-2019.json  criminaliteitscijfers-per-wijk-per-maand-gent-2020.json  criminaliteitscijfers-per-wijk-per-maand-gent-2021.json  criminaliteitscijfers-per-wijk-per-maand-gent-2022.json  fietsenstallingen-gent.json
