[tool.poetry]
name = "predataanalysis"
version = "0.1.0"
description = ""
authors = ["Bram Devlaminck <bram.devlaminck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.5.3"
turfpy = "^0.0.7"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
